--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WebOcr</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body ng-app="WebOcr" ng-controller="Ct">
 
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    Web <span style="color: dodgerblue">Ocr</span>
+                </a>
+            </div>
+        </div>
+    </nav>
 
-    <input type="file" id="the-photo-file-field"  onchange="angular.element(this).scope().selectedFile(files[0])">
-    <button id="upload" ng-click="up()">Upload</button>
+    <div class="container-fluid container2">
+        <div class="about">
+            <b>
+                Web <span style="color: dodgerblue">Ocr</span>
+            </b>
+            <div class="descip">
+                Octical Character Recognition using Tesseract API
+            </div>
+
+        </div>
+
+        <div class="steps">
+            <div class="what">
+                <b>
+                    What is Optical character recognition ?
+                </b>
+                <p>
+                    It is conversion of images of typed, handwritten or printed text into machine-encoded text
+                </p>
+            </div>
+            <div class="how">
+                <b>
+                    How to use it ?
+                </b>
+                <p>
+                    1. Select a image having a readable text<br>
+                    2. Click on upload<br>
+                    3. Viola!<br>
+                </p>
+            </div>
+
+        </div>
+
+        <div class="ocr">
+            <input type="file" onchange="angular.element(this).scope().selectedFile(files[0])" value="Select">
+            <button id="upload" ng-click="up()"><b>Upload</b></button>
+        </div>
+
+    </div>
+
+    <footer>
+
+    </footer>
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <script src="main.js"></script>
 
