--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WebOcr</title>
+
+    <!-- stylesheets-->
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body ng-app="WebOcr" ng-controller="Ct">
-
+    <!-- nav bar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">
                     Web <span style="color: dodgerblue">Ocr</span>
-                </a>
-            </div>
+            </a>
+        </div>
+        <div>
+            <a class="navbar-brand" href="https://github.com/omkarprabhu-98/WebOCR">
+                    View Code
+            </a>
         </div>
     </nav>
-
+    <!-- main container -->
     <div class="container-fluid container2">
+        <!-- about -->
         <div class="about">
             <b>
                 Web <span style="color: dodgerblue">Ocr</span>
@@ -31,7 +37,7 @@
             </div>
 
         </div>
-
+        <!-- steps -->
         <div class="steps">
             <div class="what">
                 <b>
@@ -51,33 +57,37 @@
                     3. Viola!<br>
                 </p>
             </div>
-
         </div>
-
+        <!-- ocr upload -->
         <div class="ocr">
             <input type="file" name="file" id="file" onchange="angular.element(this).scope().selectedFile(files[0])" value="Select">
             <label for="file">Choose a file</label>
             <button id="upload" ng-click="up()"><b>Upload</b></button>
         </div>
-
-        <div id="preview" ></div>
-
-        <div>
-            <p ng-bind="ocrText">
-
-            </p>
+        <!-- ocr result-->
+        <div class="result">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 column">
+                    <div id="preview"></div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 column">
+                    <div id="ocrRes">
+                        <p ng-bind="ocrText">
+                        <div class="preloader"></div>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </div>
 
-    <footer>
 
-    </footer>
-
+    <!-- external libraries-->
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+    <!-- javascript -->
     <script src="main.js"></script>
 
 </body>
